<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ad_border_white">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:text="@string/label_evaluation_title"
            android:textColor="@color/label"
            android:textSize="18sp"
            app:autoSizeMaxTextSize="18sp"
            app:autoSizeMinTextSize="15dp" />

        <ImageView
            android:id="@+id/close_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:padding="@dimen/dp_10"
            android:src="@mipmap/close">

        </ImageView>

        <com.pwj.record.view.EvaluationLevelGroupView
            android:id="@+id/levelGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginStart="31dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="31dp" />

        <RelativeLayout
            android:id="@+id/tagsGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/levelGroup"
            android:layout_marginStart="31dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="31dp">

            <TextView
                android:id="@+id/verySatisfied"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tag_background"
                android:paddingLeft="10dp"
                android:paddingTop="3dp"
                android:paddingRight="10dp"
                android:paddingBottom="3dp"
                android:text="@string/label_very_satisfied"
                android:textColor="@color/alipay"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/veryCareful"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/verySatisfied"
                android:background="@drawable/tag_background"
                android:paddingLeft="10dp"
                android:paddingTop="3dp"
                android:paddingRight="10dp"
                android:paddingBottom="3dp"
                android:text="@string/label_very_careful"
                android:textColor="@color/alipay"
                android:textSize="12sp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/evaluationText"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_below="@+id/tagsGroup"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="31dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="31dp"
            android:autofillHints=""
            android:gravity="start"
            android:hint="@string/label_evaluation_placeholder"
            android:textColor="@color/label"
            android:textSize="12sp"
            tools:ignore="UnusedAttribute" />

        <RelativeLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/evaluationText"
            android:layout_marginTop="20dp">

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#cccccc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_below="@+id/line"
                android:orientation="horizontal">

                <!--                <TextView-->
                <!--                    android:id="@+id/dialogButtonDecline"-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:layout_weight="1"-->
                <!--                    android:gravity="center"-->
                <!--                    android:text="@string/label_evaluation_not_now"-->
                <!--                    android:textAlignment="center"-->
                <!--                    android:textColor="@color/alipay"-->
                <!--                    android:textSize="16sp" />-->

                <!--                <View-->
                <!--                    android:id="@+id/separator"-->
                <!--                    android:layout_width="0.5dp"-->
                <!--                    android:layout_height="match_parent"-->
                <!--                    android:background="#cccccc" />-->

                <TextView
                    android:id="@+id/dialogButtonConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/submit_background"
                    android:gravity="center"
                    android:text="@string/label_evaluation_submit"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
